# gestion_contable

./: .gitignore  README.md  pyproject.toml  setup.py  test_esbuild_paths.js
docs/: diseno_balanza_y_automatizacion_eeff.md  manual_de_usuario.md
gestion_contable/: hooks.py  modules.txt  patches.txt
gestion_contable/doctype/documento_contable/: documento_contable.py
gestion_contable/doctype/periodo_contable/: test_periodo_contable.py
gestion_contable/fixtures/: custom_field.json  role.json
gestion_contable/gestion_contable/: __init__.py
gestion_contable/gestion_contable/overrides/: task.py
gestion_contable/gestion_contable/patches/: backfill_operational_context_and_retention_v1.py  migrate_celdas_tabulares_es_manual.py  migrate_documento_contable_evidencias_v1.py  migrate_tarea_contable_to_task.py  refresh_encargo_financial_snapshots_v1.py  reload_adjustment_print_formats_v1.py  reload_creador_de_mapeo_contable_v1.py  reload_eeff_print_formats_v1.py  reload_nota_estado_financiero_v1.py  reload_panel_de_gestion_workspace_v1.py  reload_panel_de_gestion_workspace_v2.py  reload_panel_de_gestion_workspace_v3.py  reload_panel_de_gestion_workspace_v4.py  reload_panel_de_gestion_workspace_v5.py  reload_panel_de_gestion_workspace_v6.py  reload_panel_de_gestion_workspace_v7.py  reload_version_documento_eeff_v1.py  reload_version_documento_eeff_v2.py  scope_periodo_contable_por_cliente_y_company_v1.py
gestion_contable/gestion_contable/portal/: cliente.py  test_cliente.py
gestion_contable/gestion_contable/services/: __init__.py
gestion_contable/public/: build.json
(+253 files in other folders)
